# tcg-tracker

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.local.yml  docker-compose.yml
.claude/: ralph-loop.local.md
.github/workflows/: ci-cd.yml  mobile.yml
backend/: .env.example  go.mod  go.sum
backend/cmd/fetch-japanese-cards/: main.go
backend/cmd/migrate-japanese-collection/: main.go
backend/cmd/server/: main.go
backend/data/pokemon-tcg-data-japan/: set_symbols.json
backend/internal/api/: routes.go
backend/internal/database/: migrations.go  sqlite.go
backend/internal/metrics/: collection.go  metrics.go  middleware.go
backend/internal/middleware/: auth.go  auth_test.go
backend/internal/models/: bulk_import.go  card.go  card_price.go  card_price_test.go  collection.go  translation_cache.go
backend/internal/services/: bulk_import_worker.go  gemini_service.go  gemini_translation.go  hybrid_translation.go  image_storage.go  japanese_names.go  japanese_test.go  justtcg.go  justtcg_test.go  ocr_integration_test.go  ocr_parser.go  ocr_parser_test.go  pokemon_hybrid.go  pokemon_hybrid_test.go  price_service.go  price_service_test.go  price_worker.go  scryfall.go  server_ocr.go  server_ocr_e2e_test.go  server_ocr_test.go  (+7 more)
deployment/: tcg-tracker.service  tcg.seavey.dev.conf
frontend/: index.html
frontend/src/: App.vue  router.js
identifier/: Dockerfile  Dockerfile.gpu  pyproject.toml
identifier/identifier/: app.py
mobile/: CLAUDE.md  pubspec.yaml
mobile/lib/: main.dart
monitoring/: grafana-dashboard.json
(+58 files in other folders)
